--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.2",
     "@mui/x-charts": "^8.21.0",
+    "bcrypt": "^6.0.0",
     "mongodb": "^6.20.0",
     "next": "^16.0.7",
     "react": "19.1.0",
